# navi_project

./: .gitignore  CMakeLists.txt  Main.qml  README.md  StatusBar.qml  TabIcon.qml  main.cpp
StackView/: MapView.qml
